--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,4 +1,16 @@
 @media only screen and (max-width: 600px) {
+	.container {
+	  width: 100%;
+	  padding-right: 15px;
+	  padding-left: 15px;
+	  margin-right: auto;
+	  margin-left: auto;
+	}
+
+	header {
+		display: none;
+	}
+
 
 }
 
