--- a/css/style.css
+++ b/css/style.css
@@ -353,3 +353,163 @@ nav .topnav .topnav-featured .link .curr-sub li a {
 	line-height: 30px;
 	font-weight: 700;
 }
+
+
+/*
+==============
+	Footer
+==============
+*/
+footer {
+	background: var(--footer-gray-color);
+	width: 100%;
+}
+
+footer .container {
+	padding: 40px 0;
+}
+
+footer .footer-item-header h3 {
+	color: var(--normal-color);
+	font-size: 15px;
+}
+
+footer .footer-item-body {
+	margin-top: 14px;
+}
+
+footer .footer-item-body ul li {
+	list-style: none;
+	color: var(--normal-color);
+}
+
+footer .footer-item-body ul li a {
+	color: var(--normal-color);
+	font-size: 14px;
+	line-height: 28px;
+	font-weight: 400;
+	transition: all .3s ease;
+	white-space: nowrap;
+}
+
+footer .footer-item-body ul li a:hover {
+	color: var(--warning-color);
+}
+
+footer .footer-item-body .footer-desc {
+	color: var(--normal-color);
+	font-size: 14px;
+}
+
+footer .footer-item-body .email-box {
+	margin-top: 10px;
+}
+
+footer .footer-item-body .email-box .input-box {
+	display: flex;
+	justify-content: space-between;
+	background: var(--normal-color);
+	width: 100%;
+	height: 35px;
+	border-radius: 10px;
+}
+
+footer .footer-item-body .email-box .input-box input[type=email] {
+	border: none;
+	outline: none;
+	padding: 0 10px;
+	border-top-left-radius: 10px;
+	border-bottom-left-radius: 10px;
+}
+
+
+footer .footer-item-body .email-box .input-box button {
+	background: var(--warning-color);
+	outline: none;
+	border: none;
+	padding: 0 10px;
+	font-weight: 700;
+	border-top-right-radius: 10px;
+	border-bottom-right-radius: 10px;
+	transition: all .3s ease;
+}
+
+footer .footer-item-body .email-box .input-box button:hover {
+	cursor: pointer;
+	color: var(--normal-color);
+}
+
+footer .footer-item-body .footer-social {
+	margin-top: 16px;
+}
+
+footer .footer-item-body .footer-social .social-heading {
+	font-size: 14px;
+	color: var(--normal-color);
+}
+
+footer .footer-item-body .footer-social .link {
+	margin-top: 10px;
+}
+
+footer .footer-item-body .footer-social .link ul {
+	display: flex;
+}
+
+footer .footer-item-body .footer-social .link ul li {
+	list-style: none;
+	padding-right: 30px;
+}
+
+footer .footer-item-body .footer-social .link ul li a {
+	font-size: 20px;
+	transition: all .3s ease;
+}
+
+footer .footer-item-body .footer-social .link ul li a:hover {
+	color: var(--warning-color);
+}
+
+footer .designer-info {
+	width: 100%;
+	background: var(--deep-footer-gray-color);
+}
+
+footer .designer-info  .container {
+	height: 100%;
+	height: 90px;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+}
+
+@media only screen and (max-width: 768px) {
+	footer .designer-info  {
+		display: flex;
+		flex-direction: column;
+		text-align: center;
+	}
+	footer .designer-info .payment-card {
+		display: none;
+	}
+}
+
+footer .designer-info  p {
+	color: var(--normal-color);
+	font-size: 14px;
+}
+
+footer .designer-info  .designer-desc a {
+	color: var(--warning-color);
+}
+
+footer .designer-info .payment-card ul {
+	display: flex;
+}
+
+footer .designer-info .payment-card ul li {
+	list-style: none;
+	padding: 0 14px;
+	font-size: 40px;
+	color: var(--normal-color);
+}
