--- a/css/style.css
+++ b/css/style.css
@@ -354,6 +354,99 @@ nav .topnav .topnav-featured .link .curr-sub li a {
 	font-weight: 700;
 }
 
+.topnav-focus .mobile-search {
+	display: none;
+}
+
+@media only screen and (max-width: 800px) {
+	.topnav-alert {
+		text-align: center;
+	}
+	.topnav-focus {
+		height: 70px;
+		position: relative;
+	}
+	.topnav-focus .topnav-focus-content .topnav-left,
+	.topnav-focus .topnav-focus-content .topnav-right {
+		/*margin-bottom: 2rem;*/
+	}
+	.topnav-focus .mobile-search {
+		background: var(--deep-footer-gray-color);
+		display: block;
+		padding-bottom: 16px;
+	}
+	.topnav-focus .mobile-search .search-box {
+		width: 100%;
+		background: var(--normal-color);
+		/*height: 35px;*/
+		border-radius: 6px;
+	}
+
+	.topnav-focus .mobile-search .search-box  .input-box {
+		height: 100%;
+		width: 100%;
+		display: flex;
+		justify-content: space-between;
+		align-items: center;
+	}
+
+	.topnav-focus .mobile-search .search-box  .input-box input {
+		padding: 11px;
+		border: none;
+		outline: none;
+		border-top-left-radius: 6px;
+		border-bottom-left-radius: 6px;
+	}
+
+	.topnav-focus .mobile-search .search-box  .input-box button {
+		padding: 11px 30px;
+		border: none;
+		font-size: 16px;
+		outline: none;
+		border-top-right-radius: 6px;
+		border-bottom-right-radius: 6px;
+		background: var(--warning-color);
+		cursor: pointer;
+		transition: all .3s ease;
+	}
+	.topnav-focus .mobile-search .search-box  .input-box button:hover {
+		color: var(--normal-color);
+	}
+
+	.topnav-focus .mobile-search .search-box  .input-box input {
+		width: 100%;
+		height: 100%;
+	}
+
+	.topnav-focus .topnav-focus-content .topnav-left .logo img{
+	    width: 120px;
+	    height: 110px;
+	}
+	.topnav-focus .topnav-focus-content .topnav-right .account li {
+		padding: 0 10px;
+	}
+
+	.topnav-focus .topnav-focus-content {
+	}
+	.topnav-focus .topnav-focus-content .search-box {
+		display: none;
+	}
+
+	.topnav-focus .topnav-focus-content .search-box .input-box {
+		width: 100%;
+	}
+
+
+
+
+
+	nav {
+		display: none;
+	}
+
+}
+
+
 
 /*
 ==============
@@ -439,6 +532,8 @@ footer .footer-item-body .email-box .input-box button:hover {
 	color: var(--normal-color);
 }
 
+
+
 footer .footer-item-body .footer-social {
 	margin-top: 16px;
 }
@@ -483,7 +578,7 @@ footer .designer-info  .container {
 	align-items: center;
 }
 
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: 900px) {
 	footer .designer-info  {
 		display: flex;
 		flex-direction: column;
