--- a/css/utilities.css
+++ b/css/utilities.css
@@ -5,3 +5,33 @@ img {
 a {
 	text-decoration: none;
 }
+
+
+.btn {
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    border-radius: 0;
+    border-style: solid;
+    border-width: 1px;
+    cursor: pointer;
+    font-family: Lato,Arial,Helvetica,sans-serif;
+    font-weight: 400;
+    line-height: normal;
+    margin: 0 0 1rem;
+    position: relative;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    background-color: #fff;
+    border-color: #ebebeb;
+    color: #000;
+    font-size: 1rem;
+    padding: .85714rem 2.28571rem;
+    border-radius: 4px;
+    outline: 0;
+    vertical-align: middle;
+}
+
+.padding {
+    padding: 50px 0;
+}
